<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="280dp"
        android:text="@string/uno"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:text="@string/dos"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:text="@string/tres"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/cuatro"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:text="@string/cinco"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:text="@string/seis"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/siete"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:text="@string/ocho"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button9"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:text="@string/nueve"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/buttonDecimal"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/decimal"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/button0"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:text="@string/cero"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/buttonDecimal"
        app:layout_constraintTop_toTopOf="@+id/buttonDecimal"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/buttonIgual"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/igual"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button0"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/buttonMas"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="104dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:text="@string/mas"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/buttonMenos"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="104dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:text="@string/menos"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button4"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/buttonMultiplicar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="104dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:text="@string/multiplicar"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/buttonDividir"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="104dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:text="@string/dividir"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/buttonDecimal"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <Button
        android:id="@+id/buttonLimpiar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="104dp"
        android:layout_height="56dp"
        android:layout_marginStart="24dp"
        android:text="@string/limpiar"
        app:iconTint="@color/material_dynamic_neutral30"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/buttonIgual"
        app:rippleColor="@color/material_dynamic_neutral20" />

    <EditText
        android:id="@+id/escribir"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/buttonMas"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button1" />

</androidx.constraintlayout.widget.ConstraintLayout>